Fixes scrollbars showing

--- a/src/styles/_overlays.scss
+++ b/src/styles/_overlays.scss
@@ -29,7 +29,7 @@
 
   .overlay-content {
     padding: 20px;
-    overflow: scroll;
+    overflow: auto;
     max-height: 330px;
 
     @media only screen and (max-width : $mobile) {
